--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+git://github.com/Rapptz/discord.py@1e17b7f#egg=discord.py
+discord.py>=1.6.0
 requests-oauthlib>=1.3.0
 tornado==6.1
 mysql-connector-python==8.0.23
