--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ discord.py>=1.6.0
 requests-oauthlib>=1.3.0
 tornado==6.1
 mysql-connector-python==8.0.23
+skytemple-files>=1.3.0
+skytemple-dtef>=1.1.5
+pycairo
